--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ include_package_data = True
 
 [options.extras_require]
 spike2 =
-    sonpy >=1.9.3
+    sonpy >=1.8.5
 acq =
     bioread >=1.0.5
 mat=
@@ -51,6 +51,7 @@ style =
 interfaces =
     %(acq)s
     %(mat)s
+    %(spike2)s
 test =
     pytest >=5.3
     pytest-cov
